--- a/assets/style.css
+++ b/assets/style.css
@@ -3,6 +3,13 @@ body {
   font-size: 16px;
 }
 
+.clearBtn {
+  border-radius: 1em;
+  background-color: #d3d3d3;
+  color: white;
+  padding: 20px;
+}
+
 textarea {
   background: transparent;
   border: none;
